crates/fsqlite-harness/tests/ui/sealed_checkpoint_writer_impl_fail.stderr
error[E0277]: the trait bound `ExternalCheckpointWriter: traits::sealed::Sealed` is not satisfied
 --> tests/ui/sealed_checkpoint_writer_impl_fail.rs:8:31
  |
8 | impl CheckpointPageWriter for ExternalCheckpointWriter {
  |                               ^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `traits::sealed::Sealed` is not implemented for `ExternalCheckpointWriter`
 --> tests/ui/sealed_checkpoint_writer_impl_fail.rs:6:1
  |
6 | struct ExternalCheckpointWriter;
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `traits::sealed::Sealed`:
            MockCheckpointPageWriter
            MockMvccPager
            MockTransaction
            SimplePager<V>
            SimplePagerCheckpointWriter<V>
            SimpleTransaction<V>
note: required by a bound in `CheckpointPageWriter`
 --> $WORKSPACE/crates/fsqlite-pager/src/traits.rs
  |
  | pub trait CheckpointPageWriter: sealed::Sealed + Send {
  |                                 ^^^^^^^^^^^^^^ required by this bound in `CheckpointPageWriter`
  = note: `CheckpointPageWriter` is a "sealed trait", because to implement it you also need to implement `fsqlite_pager::traits::sealed::Sealed`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
  = help: the following types implement the trait:
            fsqlite_pager::SimplePager<V>
            fsqlite_pager::SimpleTransaction<V>
            fsqlite_pager::SimplePagerCheckpointWriter<V>
            fsqlite_pager::MockMvccPager
            fsqlite_pager::MockTransaction
            fsqlite_pager::MockCheckpointPageWriter
